--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="whiteTheme">#FFF</color>
+    <color name="darkTheme">#272727</color>
+    <color name="tint_dark">#80000000</color>
+    <color name="tint_light">#80FFFFFF</color>
 </resources>
